Add room database and fixed architecture

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.21'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -39,10 +40,31 @@ android {
 
 dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
+
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
+
+    // Room
+    def versionRoom = "2.5.2"
+    implementation "androidx.room:room-runtime:$versionRoom"
+    kapt "androidx.room:room-compiler:$versionRoom"
+    implementation "androidx.room:room-ktx:$versionRoom"
+
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -55,7 +77,6 @@ dependencies {
 
 
     def nav_version = "2.5.3"
-
     // Java language implementation
     implementation("androidx.navigation:navigation-fragment:$nav_version")
     implementation("androidx.navigation:navigation-ui:$nav_version")
