--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ android {
 }
 
 dependencies {
+
+    // Dagger
+    def dagger_version = "2.46.1"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
