--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".ui.screen.MainActivity" android:exported="true">
+        <activity android:name=".ui.screen.MainActivity" android:exported="true" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
